--- a/third-party.html
+++ b/third-party.html
@@ -2,6 +2,15 @@
 <html lang="en">
 
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-509SPFF5E1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-509SPFF5E1');
+</script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -249,13 +258,13 @@ https://templatemo.com/tm-591-villa-agency
       <!-- Property Item -->
       <div class="col-lg-4 col-md-6">
         <div class="property-box">
-          <img src="assets/images/high1.jpg" alt="Luxury Villa">
+          <img src="assets/images/greenhaven500.jpg" alt="Luxury Villa">
           <div class="property-overlay">
             <h4>Green Haven Estate</h4>
             <p class="property-location">
               <i class="fa-solid fa-location-dot"></i> Karsana Abuja
             </p>
-            <a href="property-details.html" class="see-more">See More</a>
+            <a href="greenhaven.html" class="see-more">See More</a>
           </div>
         </div>
       </div>
@@ -292,7 +301,7 @@ https://templatemo.com/tm-591-villa-agency
           <div class="property-overlay">
             <h4>Trojan Villa</h4>
             <p class="property-location">
-              <i class="fa-solid fa-location-dot"></i> Katampe Extensio, ABuja
+              <i class="fa-solid fa-location-dot"></i> Katampe Extension, ABuja
             </p>
             <a href="property-details.html" class="see-more">See More</a>
           </div>
